# frame-semantic-transformer

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Dockerfile-demo  LICENSE  README.md  asset-manifest.json  index.html  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  publish.yaml  website.yaml
demo/client/: .prettierrc  README.md  package-lock.json  package.json
demo/client/src/: App.tsx  DetectFrames.css  DetectFrames.tsx  Intro.css  Intro.tsx  config.ts  index.css  index.tsx
demo/server/: app.py  download_data.py  requirements.txt
docs/: about.rst  conf.py  index.rst  training.rst  usage.rst
frame_semantic_transformer/: FrameSemanticTransformer.py  __init__.py  constants.py  evaluate.py  model.py  predict.py  train.py
frame_semantic_transformer/data/: LoaderDataCache.py  SampleSentence.py  SentenceDataset.py  TaskSampleDataset.py  chunk_list.py  data_utils.py  download_nlp_data.py  frame_types.py  framenet.py  framenet_download.py  get_possible_frames_for_trigger_bigrams.py  load_framenet_samples.py  sesame_data_splits.py  shuffle_and_split.py  tasks_from_annotated_sentences.py
frame_semantic_transformer/data/augmentations/: DataAugmentation.py  DoubleQuotesAugmentation.py  KeyboardAugmentation.py  LowercaseAugmentation.py  RemoveContractionsAugmentation.py  RemoveEndPunctuationAugmentation.py  SimpleMisspellingAugmentation.py  StripPunctuationAugmentation.py  SynonymAugmentation.py  UppercaseAugmentation.py  __init__.py  (+1 more)
frame_semantic_transformer/scripts/: evaluate.py  train.py
frame_semantic_transformer/training/: ModelRecorder.py  TrainingDataModule.py  TrainingModelWrapper.py  __init__.py  evaluate_batch.py  evaluate_best_val_models.py  evaluate_model.py  find_best_val_model_paths.py  train.py
static/css/: main.02d470f8.css  main.02d470f8.css.map  main.38aef7df.css  main.38aef7df.css.map  main.490a5f85.css  main.490a5f85.css.map
static/js/: 787.1587588d.chunk.js  787.1587588d.chunk.js.map  main.30b4134f.js  main.30b4134f.js.LICENSE.txt  main.30b4134f.js.map  main.38f313ba.js  main.38f313ba.js.LICENSE.txt  main.38f313ba.js.map  main.ec68e87e.js  main.ec68e87e.js.map
tests/: conftest.py  test_frame_semantic_transformer.py
tests/__snapshots__/: test_frame_semantic_transformer.ambr
tests/data/: test_LoaderDataCache.py  test_SampleSentence.py  test_SentenceDataset.py  test_TaskSampleDataset.py  test_data_utils.py  test_framenet.py  test_get_possible_frames_for_trigger_bigrams.py  test_load_framenet_samples.py  test_tasks_from_annotated_sentences.py
tests/training/: test_ModelRecorder.py  test_evaluate_batch.py  test_find_best_val_model_paths.py
(+72 files in other folders)
